<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="me.uport.android.dashboard.DashboardFrag"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_scanner"
            app:destination="@id/scannerFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/dashboardFragment" />
        <action
            android:id="@+id/action_dashboard_to_notifications"
            app:destination="@id/notificationListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/dashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="me.uport.android.scanner.ScannerFragment"
        android:label="@string/scanner_screen_label">
        <action
            android:id="@+id/action_scanner_cancel"
            app:destination="@id/dashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationListFragment"
        android:name="me.uport.android.notifications.NotificationFrag"
        android:label="@string/notifications_screen_label">
        <action
            android:id="@+id/action_notification_list_to_notification_details"
            app:destination="@id/unimplementedFrag"
            app:popUpTo="@id/notificationListFragment" />
    </fragment>

    <fragment
        android:id="@+id/unimplementedFrag"
        android:name="me.uport.android._dummy.UnimplementedFrag"
        android:label="@string/not_implemented" />


</navigation>