<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. uPort
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_flow"
    app:startDestination="@id/tosScreen">

    <action
        android:id="@+id/go_to_dashboard"
        app:clearTask="true"
        app:destination="@id/dashboardFlow"
        app:launchSingleTop="true"
        app:popUpTo="@id/dashboardFlow" />

    <activity
        android:id="@+id/dashboardFlow"
        android:name="me.uport.android.NavHostActivity"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/tosScreen"
        android:name="me.uport.android.onboarding.TosFrag"
        android:label="@string/title_terms_of_service"
        tools:layout="@layout/fragment_tos">
        <action
            android:id="@+id/action_tosScreen_to_createOrRecoverScreen"
            app:destination="@id/createOrRecoverScreen" />
    </fragment>

    <fragment
        android:id="@+id/createOrRecoverScreen"
        android:name="me.uport.android.onboarding.CreateOrRecoverFrag"
        android:label="@string/title_mobile_identity"
        tools:layout="@layout/fragment_create_or_recover">
        <action
            android:id="@+id/action_createOrRecoverScreen_to_recoverScreen"
            app:destination="@id/recoverScreen"
            app:popUpTo="@id/createOrRecoverScreen" />
        <action
            android:id="@+id/action_createOrRecoverScreen_to_onboardingProgress"
            app:destination="@id/onboardingProgress" />
    </fragment>

    <fragment
        android:id="@+id/recoverScreen"
        android:name="me.uport.android.onboarding.RecoverSeedFrag"
        android:label="@string/title_recover_your_identity"
        tools:layout="@layout/fragment_recover_seed">
        <action
            android:id="@+id/action_recoverScreen_to_onboardingProgress"
            app:destination="@id/onboardingProgress" />
    </fragment>

    <fragment
        android:id="@+id/onboardingProgress"
        android:name="me.uport.android.onboarding.OnboardingProgressFrag"
        android:label="@string/title_onboarding_progress"
        tools:layout="@layout/fragment_onboarding_progress">
        <action
            android:id="@+id/action_onboardingProgress_to_dashboardFlow"
            app:destination="@id/dashboardFlow" />
    </fragment>
</navigation>